Fix overflow

--- a/frontend/pages/Assignment1/components/Questions/QuestionField.module.css
+++ b/frontend/pages/Assignment1/components/Questions/QuestionField.module.css
@@ -53,6 +53,9 @@
 .modal-content {
   background: #ffffff;
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  overflow-wrap: break-word;
   width: 50vw;
   border-radius: 10px;
   padding-right: 16px;
